<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:onClick="launchSignUp"
        android:text="SIGN UP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="text|textPassword|textWebPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInUsername" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="LOGIN"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signInUsername"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName|text|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:onClick="launchHomepage"
        android:text="Sign In"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>