<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/poster"
        android:layout_marginRight="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movieName"
        android:layout_toEndOf="@+id/poster"
        android:textColor="@color/black"
        android:textSize="30dp"
        tools:text="movieName"/>

</RelativeLayout>