<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.UserProfileActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="48dp">

    <EditText
        android:id="@+id/profilePassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:focusable="true"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail" />

    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:focusable="true"
        android:hint="Email"
        android:inputType="textWebEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileUsername" />

    <Button
        android:id="@+id/updateEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="Update Email"
        app:layout_constraintBottom_toTopOf="@+id/profilePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail"
        app:layout_constraintVertical_bias="0.45999998" />

    <Button
        android:id="@+id/updatePassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="Update Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePassword"
        app:layout_constraintVertical_bias="0.45999998" />

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginTop="108dp"
        android:text="Username"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/movieListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Movies"
        app:layout_constraintBottom_toTopOf="@+id/profileEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/profileUsername"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

</androidx.constraintlayout.widget.ConstraintLayout>