<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainPageActivity">

    <TextView
        android:id="@+id/tempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Profile"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1in"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="1in"
                    android:layout_height="1in"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:elevation="3dp"
                    android:src="@drawable/topgun" />

                <TextView
                    android:id="@+id/movieList1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingLeft="1.1in"
                    android:textColor="@color/purple_500"
                    android:textSize="22sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1in"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="1in"
                    android:layout_height="1in"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:elevation="3dp"
                    android:src="@drawable/topgun" />

                <TextView
                    android:id="@+id/movieList2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingLeft="1.1in"
                    android:textColor="@color/purple_500"
                    android:textSize="23sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1in"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="1in"
                    android:layout_height="1in"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:elevation="3dp"
                    android:src="@drawable/topgun" />

                <TextView
                    android:id="@+id/movieList3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingLeft="1.1in"
                    android:textColor="@color/purple_500"
                    android:textSize="23sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1in"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="1in"
                    android:layout_height="1in"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:elevation="3dp"
                    android:src="@drawable/topgun" />

                <TextView
                    android:id="@+id/movieList4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingLeft="1.1in"
                    android:text="Movie Name and Descriptions"
                    android:textColor="@color/purple_500"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movieList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingLeft="1.1in"
                    android:textColor="@color/purple_500"
                    android:textSize="23sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1in"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="1in"
                    android:layout_height="1in"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:elevation="3dp"
                    android:src="@drawable/topgun" />

                <TextView
                    android:id="@+id/movieList5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingLeft="1.1in"
                    android:textColor="@color/purple_500"
                    android:textSize="23sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>